--- a/firstChoice.css
+++ b/firstChoice.css
@@ -12,17 +12,74 @@ body {
     height: 100%;
     font-family: palanquin-extralight !important;
 }
-
-.upload, .estimate {
-    height: 20%;
-    width: 20%;
-    background-color: grey;
-    top: 45%;
+.wallpaper-first-choice{
+    background-image: url("pics/original.jpg");
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
     position: absolute;
+    z-index: 1;
 }
+.half1 {
+    width: 50%;
+    height: 77.5%;
+    position: absolute;
+    z-index: 2;
+}
+.tan1 {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    z-index: 3;
+    opacity: 0.5;
+}
+.tan1:hover {
+    opacity: 0;
+}
+.tan2 {
+    height: 77.5%;
+    width: 50%;
+    left: 50%;
+    background-color: black;
+    position: absolute;
+    z-index: 2;
+    opacity: 0.5;
+}
+.tan2:hover {
+    opacity: 0;
+}
+
 .upload {
-    left: 15%;
+    height: 60px;
+    width: 285px;
+    background-color:lightgray;
+    position: absolute;
+    z-index: 2;
+    border-radius: 5px;
+    top: 42%;
+    left: 10%;
+    font-size: 15px;
+    color: lightgray;
+    border: none;
 }
-.estimate {
-   left: 64%;
+
+.upload:hover {
+    height: 70px;
+    width: 300px;
+    background-color:lightgray;
+    position: absolute;
+    z-index: 2;
+    border-radius: 5px;
+    top: 41%;
+    left: 9%;
+    font-size: 15px;
+    color: rgb(204,39,55);
+    border: none;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.5), 0 10px 10px rgba(0,0,0,0.5);
+    transition: 0.5s linear;
 }
+.half1:hover > .tan1 {
+    display: none;
+}
+
