--- a/firstChoice.css
+++ b/firstChoice.css
@@ -27,28 +27,14 @@ body {
     z-index: 2;
 }
 .tan1 {
-    height: 100%;
+    height: 100.1%;
     width: 100%;
     background-color: black;
     position: absolute;
     z-index: 3;
     opacity: 0.5;
 }
-.tan1:hover {
-    opacity: 0;
-}
-.tan2 {
-    height: 77.5%;
-    width: 50%;
-    left: 50%;
-    background-color: black;
-    position: absolute;
-    z-index: 2;
-    opacity: 0.5;
-}
-.tan2:hover {
-    opacity: 0;
-}
+
 
 .upload {
     height: 60px;
@@ -83,6 +69,105 @@ body {
     transition: 0.5s linear;
 }
 
-.upload:focus {
+.half2 {
+    width: 50%;
+    height: 77.5%;
+    position: absolute;
+    left:50%;
+    z-index: 2;
+}
+.tan2 {
+    height: 100.1%;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    z-index: 3;
+    opacity: 0.5;
+}
+
+.rate {
+    height: 60px;
+    width: 285px;
+    background-color:transparent;
+    position: absolute;
+    z-index: 3;
+    border-radius: 5px;
+    top: 44%;
+    left: 43%;
+    font-size: 15px;
+    color: transparent;
+    border: none;
+}
+.half2:hover > .tan2 {
+    display: none;
+}
+.half2:hover .rate{
+    height: 70px;
+    width: 300px;
+    background-color:lightgray;
+    position: absolute;
+    z-index: 3;
+    border-radius: 5px;
+    top: 43.5%;
+    left: 43%;
+    font-size: 15px;
+    color: rgb(204,39,55);
+    border: none;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.5), 0 10px 10px rgba(0,0,0,0.5);
+    transition: 0.5s linear;
+}
+button.upload , button.rate:focus {
     outline: 0;
+}
+button.upload , button.rate:hover {
+    cursor: pointer;
+}
+.footer {
+    background-image: url("pics/elegant-background-grey.jpg");
+   position: absolute;
+    width: 100%;
+    height: 45%;
+    background-repeat: no-repeat;
+    top: 77.5%;
+}
+.publish-two-photos {
+    width: 22%;
+    left: 15%;
+    top:5%;
+    position: absolute;
+    z-index: 1;
+    text-align: center;
+    color: rgb(204,39,55);
+    transition: all 0.5s ease-in-out;
+
+}
+.publish-details {
+    width: 100%;
+    text-align: center;
+    font-size: 22px;
+    color:white;
+}
+.publish-two-photos:hover {
+    transform: scale(1.1,1.1);
+    cursor:pointer;
+}
+.rate-photos {
+    width: 22%;
+    left: 65%;
+    top: 5%;
+    position: absolute;
+    z-index: 1;
+    text-align: center;
+    color: rgb(204,39,55);
+    transition: all 0.5s ease-in-out;
+}
+.rate-details {
+    width: 100%;
+    text-align: center;
+    font-size: 22px;
+    color:white;
+}
+.rate-photos:hover {
+    transform: scale(1.1,1.1);
+    cursor:pointer;
 }
