--- a/mainstyles.css
+++ b/mainstyles.css
@@ -81,6 +81,7 @@ p.phrase {
     color:rgb(204,39,55);
     background-color: whitesmoke;
     transition: 0.5s linear;
+    cursor: pointer;
 }
 
 button.start-btn:active {
@@ -124,6 +125,7 @@ button.start-btn:focus{
 
 .publish:hover {
     transform: scale(1.1, 1.1);
+    cursor:pointer;
 }
 
 .rate {
@@ -134,6 +136,7 @@ button.start-btn:focus{
 
 .rate:hover {
     transform: scale(1.1, 1.1);
+    cursor:pointer;
 }
 
 .publish, .rate {
