--- a/firstChoice.css
+++ b/firstChoice.css
@@ -129,13 +129,14 @@ button.upload , button.rate:hover {
     height: 45%;
     background-repeat: no-repeat;
     top: 77.5%;
+    z-index: 1;
 }
 .publish-two-photos {
     width: 22%;
     left: 15%;
     top:5%;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     text-align: center;
     color: rgb(204,39,55);
     transition: all 0.5s ease-in-out;
@@ -156,7 +157,7 @@ button.upload , button.rate:hover {
     left: 65%;
     top: 5%;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     text-align: center;
     color: rgb(204,39,55);
     transition: all 0.5s ease-in-out;
@@ -170,4 +171,23 @@ button.upload , button.rate:hover {
 .rate-photos:hover {
     transform: scale(1.1,1.1);
     cursor:pointer;
+}
+.stick {
+    position: absolute;
+    width: 1px;
+    height: 220px;
+    background-color:white ;
+    left:50%;
+    top:20%;
+}
+.footertan {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.7;
+    z-index:3;
+}
+.footer:hover .footertan {
+    display: none;
 }
