--- a/mainstyles.css
+++ b/mainstyles.css
@@ -4,9 +4,16 @@
 }
 
 html {
+    margin: 0;
+    padding:0;
+    /*overflow: hidden;*/
     height: 100%;
+    width:100%;
+
+
 }
 body {
+    padding: 0;
    margin: 0;
     width: 100%;
     height: 100%;
@@ -24,7 +31,7 @@ button {
 .main-picture {
     height: 80%;
     width: 100%;
-    position: relative;
+    position: absolute;
 }
 .logo {
     background-image:url("pics/Chooser (1).png") ;
@@ -69,8 +76,8 @@ p.phrase {
     position: absolute;
     z-index: 2;
     border-radius: 5px;
-    left: 230px;
-    top: 450px;
+    left: 19%;
+    top: 57%;
     font-size: 20px;
     font-weight: bolder;
     color: white;
@@ -94,15 +101,23 @@ button.start-btn:focus{
 }
 .describe {
     width: 100%;
+    height:51%;
     top: 80%;
-    background-image: url("pics/elegant-background-grey.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
+    padding:0;
+    margin:0;
+    background-image: url("pics/elegant-background-grey.jpg");
 }
 .headtext {
     text-align: center;
-    left: 35%;
+    vertical-align: middle;
+    margin:0;
+    padding-top: 2%;
     font-size: 30px;
     color: rgb(130,18,28);
+    height: 20%;
 }
 
 .main-idea {
@@ -111,15 +126,15 @@ button.start-btn:focus{
     color: rgb(204,39,55);
     width: 20%;
     margin: auto;
-    padding: 5px;
-    margin-top: 50px;
+    padding: 1%;
+    margin-top: 2%;
     margin-bottom: 50px;
     font-size: 20px;
 }
 
 .publish {
     width: 16%;
-    left: 16%;
+    left: 10%;
     transition: all 0.5s ease-in-out;
 }
 
@@ -130,7 +145,7 @@ button.start-btn:focus{
 
 .rate {
     width: 15%;
-    left: 70%;
+    right:10%;
     transition: all 0.5s ease-in-out;
 }
 
@@ -140,10 +155,11 @@ button.start-btn:focus{
 }
 
 .publish, .rate {
-    top: 160px;
+    top: 33%;
     position: absolute;
     color: white;
     font-size: x-large;
+    text-align: center;
 }
 
 .publish-details, .rate-details {
