--- a/mainstyles.css
+++ b/mainstyles.css
@@ -65,19 +65,19 @@ p.phrase {
     color: whitesmoke;
     font-size: 50px;
     z-index: 2;
-    padding-top: 15%;
-    padding-left: 10%;
+    margin-top: 15%;
+    margin-left: 10%;
 }
 
 .start-btn {
     height: 55px;
     width: 230px;
     background-color: rgb(204,39,55);
-    position: absolute;
+    position: relative;
     z-index: 2;
     border-radius: 5px;
-    left: 19%;
-    top: 57%;
+    margin-left: 18%;
+    margin-top: 34%;
     font-size: 20px;
     font-weight: bolder;
     color: white;
@@ -101,7 +101,7 @@ button.start-btn:focus{
 }
 .describe {
     width: 100%;
-    height:51%;
+    height: 100%;
     top: 80%;
     background-repeat: no-repeat;
     background-size: cover;
